--- a/solid-no-bun/solid/tsconfig.json
+++ b/solid-no-bun/solid/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsxImportSource": "solid-js",
+    "noFallthroughCasesInSwitch": true,
     "target": "ES2021",
     "jsx": "preserve",
     "module": "NodeNext",
