--- a/solid-no-bun/playground/vite-solid/package.json
+++ b/solid-no-bun/playground/vite-solid/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/solid-query": "5.18.1",
+    "buffer": "^6.0.3",
     "solid-js": "^1.8.7",
     "solid-wagmi": "workspace: *"
   },
