--- a/solid-no-bun/playground/vite-solid/package.json
+++ b/solid-no-bun/playground/vite-solid/package.json
@@ -12,7 +12,8 @@
     "@tanstack/solid-query": "5.18.1",
     "buffer": "^6.0.3",
     "solid-js": "^1.8.7",
-    "solid-wagmi": "workspace: *"
+    "solid-wagmi": "workspace: *",
+    "viem": "^2.7.2"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
