--- a/solid-no-bun/package.json
+++ b/solid-no-bun/package.json
@@ -1,13 +1,10 @@
 {
   "scripts": {
-    "format": "pnpm dlx @biomejs/biome format . --write",
+    "format": "pnpm --filter ./solid run format",
     "build": "pnpm run build:solid && pnpm run build:playground",
     "watch:solid": "pnpm --filter ./solid run watch",
     "build:solid": "pnpm --filter ./solid run build",
     "dev:playground": "pnpm --filter ./playground/vite-solid run dev",
     "build:playground": "pnpm --filter ./playground/vite-solid run build"
-  },
-	"devDependencies": {
-		"@biomejs/biome": "1.5.3"
-	}
+  }
 }
