--- a/solid-no-bun/solid/package.json
+++ b/solid-no-bun/solid/package.json
@@ -11,7 +11,14 @@
   "scripts": {
     "build": "npx tsc",
     "watch": "npx tsc --watch",
-    "upload": "npm run build && npm publish --public"
+    "upload": "npm run build && npm publish --public",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "solid-jest/preset/browser",
+    "setupFilesAfterEnv": [
+      "<rootDir>/node_modules/@testing-library/jest-dom"
+    ]
   },
   "files": [
     "dist/**",
@@ -94,7 +101,24 @@
   "devDependencies": {
     "@tanstack/solid-query": "5.18.1",
     "solid-js": "1.8.12",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
+    "@solidjs/testing-library": "^0.8.5",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@types/jest": "^29.5.11",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "babel-jest": "^29.7.0",
+    "babel-preset-jest": "^29.6.3",
+    "babel-preset-solid": "^1.8.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^23.2.0",
+    "regenerator-runtime": "0.14.1",
+    "solid-devtools": "^0.29.2",
+    "solid-jest": "^0.2.0",
+    "solid-testing-library": "^0.5.1"
   },
   "contributors": [
     "awkweb.eth <t@wevm.dev>",
