--- a/solid-no-bun/solid/tsconfig.json
+++ b/solid-no-bun/solid/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "types": ["jest", "@testing-library/jest-dom"],
   "compilerOptions": {
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -29,5 +30,5 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true
   },
-  "exclude": ["/dist", "dist/**/*.d.ts"]
+  "exclude": ["/dist", "dist/**/*.d.ts", "src/**/*.test.ts", "src/**/*.test.tsx"]
 }
