--- a/solid-no-bun/solid/package.json
+++ b/solid-no-bun/solid/package.json
@@ -18,6 +18,15 @@
     "preset": "solid-jest/preset/browser",
     "setupFilesAfterEnv": [
       "<rootDir>/node_modules/@testing-library/jest-dom"
+    ],
+    "moduleNameMapper": {
+      "^(\\.\\/.+)\\.js$": "$1"
+    },
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "'node_modules/(?!@wagmi/core/)'"
     ]
   },
   "files": [
@@ -99,26 +108,16 @@
     "@wagmi/core": "2.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-typescript": "^7.23.3",
-    "@solidjs/testing-library": "^0.8.5",
+    "@solidjs/testing-library": "^0.8.6",
     "@tanstack/solid-query": "5.18.1",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@types/jest": "^29.5.12",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "babel-jest": "^29.7.0",
-    "babel-preset-jest": "^29.6.3",
-    "babel-preset-solid": "^1.8.9",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^23.2.0",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
+    "jsdom": "^24.0.0",
     "regenerator-runtime": "0.14.1",
-    "solid-devtools": "^0.29.2",
-    "solid-jest": "^0.2.0",
     "solid-js": "1.8.12",
-    "solid-testing-library": "^0.5.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^1.2.2"
   },
   "contributors": [
     "awkweb.eth <t@wevm.dev>",
