fix(tsconfig): remove trailing comma

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "extends": "./tsconfig.build.json",
-  "include": [
-    "src/**/*.ts?(x)",
-    "test/**/*.ts?(x)",
-  ],
+  "include": ["src/**/*.ts?(x)", "test/**/*.ts?(x)"],
   "exclude": []
 }
