--- a/.github/workflows/close-issue.yml
+++ b/.github/workflows/close-issue.yml
@@ -1,6 +1,7 @@
 name: Close Issue
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
 
@@ -8,10 +9,10 @@ jobs:
   close-issues:
     runs-on: ubuntu-latest
     steps:
-      - name: needs reproduction
+      - name: Needs Reproduction
         uses: actions-cool/issues-helper@v3
         with:
           actions: 'close-issues'
           token: ${{ secrets.GITHUB_TOKEN }}
-          labels: 'needs reproduction'
+          labels: 'Needs Reproduction'
           inactive-day: 3
