--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@vitest/coverage-v8": "^0.34.5",
     "@vitest/ui": "^0.34.5",
     "@wagmi/test": "workspace:*",
-    "bun": "1.0.1",
-    "bun-types": "^1.0.3",
+    "bun": "1.1.0",
+    "bun-types": "^1.1.0",
     "glob": "^10.3.10",
     "happy-dom": "^12.2.1",
     "jsdom": "^20.0.3",
@@ -71,8 +71,15 @@
     "pre-commit": "pnpm format && pnpm lint:fix"
   },
   "knip": {
-    "ignore": ["**/*.test-d.ts", "**/templates/**", "**/hardhat.config.js"],
-    "ignoreBinaries": ["only-allow", "open"],
+    "ignore": [
+      "**/*.test-d.ts",
+      "**/templates/**",
+      "**/hardhat.config.js"
+    ],
+    "ignoreBinaries": [
+      "only-allow",
+      "open"
+    ],
     "ignoreWorkspaces": [
       "docs",
       "packages/register-tests/**",
@@ -92,11 +99,15 @@
       },
       "packages/connectors": {
         "entry": "src/exports/index.ts!",
-        "ignoreDependencies": ["@walletconnect/modal"]
+        "ignoreDependencies": [
+          "@walletconnect/modal"
+        ]
       },
       "packages/core": {
         "entry": "src/exports/{actions,chains,codegen,index,internal,query}.ts!",
-        "ignoreDependencies": ["@tanstack/query-core"]
+        "ignoreDependencies": [
+          "@tanstack/query-core"
+        ]
       },
       "packages/create-wagmi": {
         "entry": "src/cli.ts!"
