format, add codeowners for walletconnect connector

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 @tmm @jxom
 
 /packages/connectors/src/safe @DaniSomoza @dasanra @mikhailxyz @yagopv
-/packages/connectors/src/walletConnect @ganchoradkov @0xAsimetriq
+/packages/connectors/src/walletConnect @ganchoradkov @glitch-txs @ignaciosantise @tomiir
