--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -45,7 +45,7 @@
     }
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "3.9.1",
+    "@coinbase/wallet-sdk": "4.0.0-rc.1",
     "@metamask/sdk": "0.18.6",
     "@safe-global/safe-apps-provider": "0.18.1",
     "@safe-global/safe-apps-sdk": "8.1.0",
