--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,12 @@ packages/cli/plugins
 packages/core/actions
 packages/core/chains
 packages/core/codegen
+packages/core/experimental
 packages/core/internal
 packages/core/query
 packages/react/actions
 packages/react/chains
 packages/react/codegen
 packages/react/connectors
+packages/react/experimental
 packages/react/query
