--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "test:build": "pnpm run --r --parallel test:build",
     "test:cov": "vitest run --coverage",
     "test:typecheck": "vitest typecheck",
-    "test:ui": "vitest --ui",
     "test:update": "vitest --update",
     "typecheck": "pnpm run --r --parallel typecheck && tsc --noEmit",
     "version:update": "bun .scripts/updateVersion.ts",
@@ -38,8 +37,7 @@
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "^2.26.2",
     "@viem/anvil": "0.0.6",
-    "@vitest/coverage-v8": "^0.34.5",
-    "@vitest/ui": "^0.34.5",
+    "@vitest/coverage-v8": "^1.6.0",
     "@wagmi/test": "workspace:*",
     "bun": "1.0.1",
     "bun-types": "^1.0.3",
@@ -53,7 +51,7 @@
     "simple-git-hooks": "^2.9.0",
     "typescript": "5.4.2",
     "viem": "2.9.31",
-    "vitest": "^0.34.5"
+    "vitest": "^1.6.0"
   },
   "packageManager": "pnpm@8.10.5",
   "pnpm": {
@@ -71,8 +69,15 @@
     "pre-commit": "pnpm format && pnpm lint:fix"
   },
   "knip": {
-    "ignore": ["**/*.test-d.ts", "**/templates/**", "**/hardhat.config.js"],
-    "ignoreBinaries": ["only-allow", "open"],
+    "ignore": [
+      "**/*.test-d.ts",
+      "**/templates/**",
+      "**/hardhat.config.js"
+    ],
+    "ignoreBinaries": [
+      "only-allow",
+      "open"
+    ],
     "ignoreWorkspaces": [
       "docs",
       "packages/register-tests/**",
@@ -92,11 +97,15 @@
       },
       "packages/connectors": {
         "entry": "src/exports/index.ts!",
-        "ignoreDependencies": ["@walletconnect/modal"]
+        "ignoreDependencies": [
+          "@walletconnect/modal"
+        ]
       },
       "packages/core": {
         "entry": "src/exports/{actions,chains,codegen,experimental,index,internal,query}.ts!",
-        "ignoreDependencies": ["@tanstack/query-core"]
+        "ignoreDependencies": [
+          "@tanstack/query-core"
+        ]
       },
       "packages/create-wagmi": {
         "entry": "src/cli.ts!"
