--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "@biomejs/biome": "1.1.2",
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "^2.26.2",
+    "@types/bun": "^1.1.1",
     "@viem/anvil": "0.0.6",
     "@vitest/coverage-v8": "^1.6.0",
     "@wagmi/test": "workspace:*",
-    "bun": "1.0.1",
-    "bun-types": "^1.0.3",
+    "bun": "^1.1.7",
     "glob": "^10.3.10",
     "happy-dom": "^12.2.1",
     "jsdom": "^20.0.3",
