--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -90,6 +90,7 @@
   "devDependencies": {
     "@types/dedent": "^0.7.0",
     "@types/fs-extra": "^11.0.2",
+    "@types/node": "^20.7.2",
     "fixturez": "^1.1.0",
     "msw": "^2.0.6"
   },
