--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@wagmi/test": "workspace:*",
     "bun": "^1.1.7",
     "glob": "^10.3.12",
-    "happy-dom": "^14.8.3",
+    "happy-dom": "^12.2.1",
     "knip": "^5.12.3",
     "publint": "^0.2.7",
     "sherif": "^0.8.4",
@@ -67,8 +67,14 @@
     "pre-commit": "pnpm format && pnpm lint:fix"
   },
   "knip": {
-    "ignore": ["**/*.test-d.ts", "**/templates/**", "**/hardhat.config.js"],
-    "ignoreBinaries": ["only-allow"],
+    "ignore": [
+      "**/*.test-d.ts",
+      "**/templates/**",
+      "**/hardhat.config.js"
+    ],
+    "ignoreBinaries": [
+      "only-allow"
+    ],
     "ignoreWorkspaces": [
       "docs",
       "packages/register-tests/**",
@@ -85,23 +91,33 @@
           "src/exports/{config,index,plugins}.ts!",
           "types/*.d.ts!"
         ],
-        "ignore": ["test/{constants,setup,utils}.ts"]
+        "ignore": [
+          "test/{constants,setup,utils}.ts"
+        ]
       },
       "packages/connectors": {
         "entry": "src/exports/index.ts!",
-        "ignoreDependencies": ["@walletconnect/modal"]
+        "ignoreDependencies": [
+          "@walletconnect/modal"
+        ]
       },
       "packages/core": {
         "entry": "src/exports/{actions,chains,codegen,experimental,index,internal,query}.ts!",
-        "ignore": ["test/setup.ts"],
-        "ignoreDependencies": ["@tanstack/query-core"]
+        "ignore": [
+          "test/setup.ts"
+        ],
+        "ignoreDependencies": [
+          "@tanstack/query-core"
+        ]
       },
       "packages/create-wagmi": {
         "entry": "src/cli.ts!"
       },
       "packages/react": {
         "entry": "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
-        "ignore": ["test/setup.ts"]
+        "ignore": [
+          "test/setup.ts"
+        ]
       },
       "packages/test": {
         "entry": [
