--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:next": "pnpm --filter next-app dev",
     "dev:react": "pnpm --filter vite-react dev",
     "dev:ssr-react": "pnpm --filter vite-ssr-react dev",
-    "docs:dev": "rimraf node_modules/.cache/twoslash && pnpm --filter docs dev",
+    "docs:dev": "pnpm --filter docs dev",
     "format": "biome format . --write",
     "lint": "biome check .",
     "lint:fix": "pnpm lint --apply",
@@ -27,7 +27,6 @@
     "test:build": "pnpm run --r --parallel test:build",
     "test:cov": "vitest run --coverage",
     "test:typecheck": "vitest typecheck",
-    "test:ui": "vitest --ui",
     "test:update": "vitest --update",
     "typecheck": "pnpm run --r --parallel typecheck && tsc --noEmit",
     "version:update": "bun .scripts/updateVersion.ts",
@@ -36,26 +35,23 @@
   "devDependencies": {
     "@biomejs/biome": "1.1.2",
     "@changesets/changelog-github": "0.4.6",
-    "@changesets/cli": "^2.26.2",
+    "@changesets/cli": "^2.27.1",
+    "@types/bun": "^1.1.1",
     "@viem/anvil": "0.0.6",
-    "@vitest/coverage-v8": "^0.34.5",
-    "@vitest/ui": "^0.34.5",
+    "@vitest/coverage-v8": "^1.6.0",
     "@wagmi/test": "workspace:*",
-    "bun": "1.0.1",
-    "bun-types": "^1.0.3",
-    "glob": "^10.3.10",
+    "bun": "^1.1.7",
+    "glob": "^10.3.12",
     "happy-dom": "^12.2.1",
-    "jsdom": "^20.0.3",
-    "knip": "^2.29.0",
-    "publint": "^0.2.2",
-    "rimraf": "^4.4.1",
-    "sherif": "^0.8.1",
-    "simple-git-hooks": "^2.9.0",
+    "knip": "^5.12.3",
+    "publint": "^0.2.7",
+    "sherif": "^0.8.4",
+    "simple-git-hooks": "^2.11.1",
     "typescript": "5.4.2",
     "viem": "2.9.31",
-    "vitest": "^0.34.5"
+    "vitest": "^1.6.0"
   },
-  "packageManager": "pnpm@8.10.5",
+  "packageManager": "pnpm@9.1.0",
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
@@ -71,8 +67,14 @@
     "pre-commit": "pnpm format && pnpm lint:fix"
   },
   "knip": {
-    "ignore": ["**/*.test-d.ts", "**/templates/**", "**/hardhat.config.js"],
-    "ignoreBinaries": ["only-allow", "open"],
+    "ignore": [
+      "**/*.test-d.ts",
+      "**/templates/**",
+      "**/hardhat.config.js"
+    ],
+    "ignoreBinaries": [
+      "only-allow"
+    ],
     "ignoreWorkspaces": [
       "docs",
       "packages/register-tests/**",
@@ -88,21 +90,34 @@
           "src/cli.ts!",
           "src/exports/{config,index,plugins}.ts!",
           "types/*.d.ts!"
+        ],
+        "ignore": [
+          "test/{constants,setup,utils}.ts"
         ]
       },
       "packages/connectors": {
         "entry": "src/exports/index.ts!",
-        "ignoreDependencies": ["@walletconnect/modal"]
+        "ignoreDependencies": [
+          "@walletconnect/modal"
+        ]
       },
       "packages/core": {
         "entry": "src/exports/{actions,chains,codegen,experimental,index,internal,query}.ts!",
-        "ignoreDependencies": ["@tanstack/query-core"]
+        "ignore": [
+          "test/setup.ts"
+        ],
+        "ignoreDependencies": [
+          "@tanstack/query-core"
+        ]
       },
       "packages/create-wagmi": {
         "entry": "src/cli.ts!"
       },
       "packages/react": {
-        "entry": "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!"
+        "entry": "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
+        "ignore": [
+          "test/setup.ts"
+        ]
       },
       "packages/test": {
         "entry": [
