--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,8 +50,12 @@
   },
   "typesVersions": {
     "*": {
-      "config": ["./dist/types/exports/config.d.ts"],
-      "plugins": ["./dist/types/exports/plugins.d.ts"]
+      "config": [
+        "./dist/types/exports/config.d.ts"
+      ],
+      "plugins": [
+        "./dist/types/exports/plugins.d.ts"
+      ]
     }
   },
   "peerDependencies": {
@@ -90,7 +94,18 @@
     "fixturez": "^1.1.0",
     "msw": "^2.2.14"
   },
-  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
+  "contributors": [
+    "awkweb.eth <t@wevm.dev>",
+    "jxom.eth <j@wevm.dev>"
+  ],
   "funding": "https://github.com/sponsors/wevm",
-  "keywords": ["wagmi", "eth", "ethereum", "dapps", "wallet", "web3", "cli"]
+  "keywords": [
+    "wagmi",
+    "eth",
+    "ethereum",
+    "dapps",
+    "wallet",
+    "web3",
+    "cli"
+  ]
 }
