--- a/packages/create-wagmi/package.json
+++ b/packages/create-wagmi/package.json
@@ -39,25 +39,14 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
-    "@types/cross-spawn": "^6.0.2",
-    "@types/fs-extra": "^11.0.2",
-    "@types/node": "^20.7.2",
-    "@types/prompts": "^2.4.1",
+    "@types/cross-spawn": "^6.0.6",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.12.10",
+    "@types/prompts": "^2.4.9",
     "execa": "^8.0.1",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.2.0"
   },
-  "contributors": [
-    "awkweb.eth <t@wevm.dev>",
-    "jxom.eth <j@wevm.dev>"
-  ],
+  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
-  "keywords": [
-    "wagmi",
-    "eth",
-    "ethereum",
-    "dapps",
-    "wallet",
-    "web3",
-    "cli"
-  ]
+  "keywords": ["wagmi", "eth", "ethereum", "dapps", "wallet", "web3", "cli"]
 }
