--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -54,6 +54,22 @@
       "types": "./dist/types/exports/connectors.d.ts",
       "default": "./dist/esm/exports/connectors.js"
     },
+    "./connectors/coinbaseWallet": {
+      "types": "./dist/types/exports/connectors/coinbaseWallet.d.ts",
+      "default": "./dist/esm/exports/connectors/coinbaseWallet.js"
+    },
+    "./connectors/metaMask": {
+      "types": "./dist/types/exports/connectors/metaMask.d.ts",
+      "default": "./dist/esm/exports/connectors/metaMask.js"
+    },
+    "./connectors/safe": {
+      "types": "./dist/types/exports/connectors/safe.d.ts",
+      "default": "./dist/esm/exports/connectors/safe.js"
+    },
+    "./connectors/walletConnect": {
+      "types": "./dist/types/exports/connectors/walletConnect.d.ts",
+      "default": "./dist/esm/exports/connectors/walletConnect.js"
+    },
     "./experimental": {
       "types": "./dist/types/exports/experimental.d.ts",
       "default": "./dist/esm/exports/experimental.js"
@@ -66,24 +82,12 @@
   },
   "typesVersions": {
     "*": {
-      "actions": [
-        "./dist/types/exports/actions.d.ts"
-      ],
-      "chains": [
-        "./dist/types/exports/chains.d.ts"
-      ],
-      "codegen": [
-        "./dist/types/exports/codegen.d.ts"
-      ],
-      "connectors": [
-        "./dist/types/exports/connectors.d.ts"
-      ],
-      "experimental": [
-        "./dist/types/exports/experimental.d.ts"
-      ],
-      "query": [
-        "./dist/types/exports/query.d.ts"
-      ]
+      "actions": ["./dist/types/exports/actions.d.ts"],
+      "chains": ["./dist/types/exports/chains.d.ts"],
+      "codegen": ["./dist/types/exports/codegen.d.ts"],
+      "connectors": ["./dist/types/exports/connectors.d.ts"],
+      "experimental": ["./dist/types/exports/experimental.d.ts"],
+      "query": ["./dist/types/exports/query.d.ts"]
     }
   },
   "peerDependencies": {
@@ -111,10 +115,7 @@
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1"
   },
-  "contributors": [
-    "awkweb.eth <t@wevm.dev>",
-    "jxom.eth <j@wevm.dev>"
-  ],
+  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
   "keywords": [
     "wagmi",
