--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:core": "pnpm --filter vite-core dev",
     "dev:next": "pnpm --filter next-app dev",
     "dev:react": "pnpm --filter vite-react dev",
+    "dev:vue": "pnpm --filter vite-vue dev",
     "docs:dev": "pnpm --filter site dev",
     "format": "biome format . --write",
     "lint": "biome check .",
