--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -49,17 +49,14 @@
     "@metamask/sdk": "0.18.6",
     "@safe-global/safe-apps-provider": "0.18.1",
     "@safe-global/safe-apps-sdk": "8.1.0",
-    "@walletconnect/ethereum-provider": "2.11.2",
+    "@walletconnect/ethereum-provider": "2.13.0",
     "@walletconnect/modal": "2.6.2"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
     "msw": "^2.2.14"
   },
-  "contributors": [
-    "awkweb.eth <t@wevm.dev>",
-    "jxom.eth <j@wevm.dev>"
-  ],
+  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
   "keywords": [
     "react",
