--- a/site/package.json
+++ b/site/package.json
@@ -19,7 +19,7 @@
     "unocss": "^0.59.4",
     "viem": "2.*",
     "vitepress": "^1.1.4",
-    "vue": "^3.4.27",
+    "vue": ">=3.4.21",
     "wagmi": "workspace:*"
   }
 }
