--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
     "@types/react": ">=18.3.1",
     "@wagmi/connectors": "workspace:*",
     "@wagmi/core": "workspace:*",
+    "@wagmi/vue": "workspace:*",
     "abitype": "*",
     "react": ">=18.3.1",
     "unocss": "^0.59.4",
