--- a/playgrounds/vite-vue/package.json
+++ b/playgrounds/vite-vue/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "buffer": "^6.0.3",
     "vite": "^5.2.11",
     "vue-tsc": "^2.0.6"
   }
