--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ packages/react/codegen
 packages/react/connectors
 packages/react/experimental
 packages/react/query
+packages/vue/actions
+packages/vue/chains
+packages/vue/connectors
+packages/vue/nuxt
+packages/vuw/query
