--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "pnpm run clean && pnpm run build:esm+types",
     "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
-    "clean": "rm -rf dist tsconfig.tsbuildinfo actions chains connectors query",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo actions chains connectors nuxt query",
     "test:build": "publint --strict",
     "typecheck": "vue-tsc --noEmit"
   },
@@ -24,6 +24,7 @@
     "/actions",
     "/chains",
     "/connectors",
+    "/nuxt",
     "/query"
   ],
   "sideEffects": false,
@@ -48,6 +49,10 @@
       "types": "./dist/types/exports/connectors.d.ts",
       "default": "./dist/esm/exports/connectors.js"
     },
+    "./nuxt": {
+      "types": "./dist/types/exports/nuxt.d.ts",
+      "default": "./dist/esm/exports/nuxt.js"
+    },
     "./query": {
       "types": "./dist/types/exports/query.d.ts",
       "default": "./dist/esm/exports/query.js"
@@ -59,16 +64,21 @@
       "actions": ["./dist/types/exports/actions.d.ts"],
       "chains": ["./dist/types/exports/chains.d.ts"],
       "connectors": ["./dist/types/exports/connectors.d.ts"],
+      "nuxt": ["./dist/types/exports/nuxt.d.ts"],
       "query": ["./dist/types/exports/query.d.ts"]
     }
   },
   "peerDependencies": {
     "@tanstack/vue-query": ">=5.0.0",
+    "nuxt": ">=3.0.0",
     "typescript": ">=5.0.4",
     "viem": "2.x",
     "vue": ">=3"
   },
   "peerDependenciesMeta": {
+    "nuxt": {
+      "optional": true
+    },
     "typescript": {
       "optional": true
     }
@@ -80,6 +90,7 @@
   "devDependencies": {
     "@tanstack/vue-query": ">=5.35.1",
     "@vue/test-utils": "^2.4.6",
+    "nuxt": "^3.11.2",
     "vue": ">=3.4.21",
     "vue-tsc": "^2.0.6"
   },
