--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
       },
       "packages/vue": {
         "entry": "src/exports/{actions,chains,connectors,index,nuxt,query}.ts!",
-        "ignore": ["test/setup.ts"]
+        "ignore": ["test/setup.ts"],
+        "ignoreDependencies": ["nuxt"]
       }
     }
   }
