--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -88,6 +88,7 @@
     "@wagmi/core": "workspace:*"
   },
   "devDependencies": {
+    "@nuxt/schema": "^3.11.2",
     "@tanstack/vue-query": ">=5.35.1",
     "@vue/test-utils": "^2.4.6",
     "nuxt": "^3.11.2",
