--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
     "@shikijs/vitepress-twoslash": "^1.4.0",
     "@tanstack/query-core": ">=5.35.1",
     "@tanstack/react-query": ">=5.35.1",
+    "@tanstack/vue-query": ">=5.35.1",
     "@types/react": ">=18.3.1",
     "@wagmi/connectors": "workspace:*",
     "@wagmi/core": "workspace:*",
