--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -17,7 +17,7 @@ body:
     id: reproduction
     attributes:
       label: Link to Minimal Reproducible Example
-      description: "Please provide a link that can reproduce the problem: [new.wagmi.sh](https://new.wagmi.sh) for runtime issues or [TypeScript Playground](https://www.typescriptlang.org/play) for type issues. For most issues, you will likely get asked to provide a minimal reproducible example so why not add one now :) If a report is vague (e.g. just a generic error message) and has no reproduction, it will receive a \"needs reproduction\" label. If no reproduction is provided after 3 days, it will be auto-closed."
+      description: "Please provide a link that can reproduce the problem: [new.wagmi.sh](https://new.wagmi.sh) for runtime issues or [TypeScript Playground](https://www.typescriptlang.org/play) for type issues. For most issues, you will likely get asked to provide a minimal reproducible example so why not add one now :) If a report is vague (e.g. just snippets, generic error message, etc.) and has no reproduction, it will receive a \"Needs Reproduction\" label and be auto-closed."
       placeholder: https://new.wagmi.sh
     validations:
       required: false
@@ -64,7 +64,7 @@ body:
   - type: textarea
     attributes:
       label: Anything else?
-      description: Anything that will give us more context about the issue you are encountering.
+      description: Anything that will give us more context about the issue you are encountering. Framework (e.g. React, Vue), app framework (e.g. Next.js, Nuxt), bundler, etc.
     validations:
       required: false
 
