--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "@wagmi/core": "workspace:*",
     "@wagmi/vue": "workspace:*",
     "abitype": "*",
+    "nuxt": "^3.11.2",
     "react": ">=18.3.1",
     "unocss": "^0.59.4",
     "viem": "2.*",
