--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "pnpm run --r --parallel clean && rm -rf packages/**/*.json.tmp",
     "deps": "pnpx taze -r",
     "dev": "pnpm dev:react",
-    "dev:core": "pnpm --filter vite-core dev",
     "dev:cli": "pnpm --filter cli dev",
+    "dev:core": "pnpm --filter vite-core dev",
     "dev:create-wagmi": "pnpm --filter create-wagmi dev",
     "dev:next": "pnpm --filter next-app dev",
     "dev:nuxt": "pnpm --filter nuxt-app dev",
@@ -28,7 +28,9 @@
     "prepare": "pnpm simple-git-hooks",
     "test": "vitest",
     "test:build": "pnpm run --r --parallel test:build",
+    "test:cli": "vitest --project @wagmi/cli",
     "test:core": "vitest --project @wagmi/core",
+    "test:create-wagmi": "vitest --project create-wagmi",
     "test:cov": "vitest run --coverage",
     "test:react": "vitest --project wagmi",
     "test:typecheck": "vitest typecheck",
