--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -45,21 +45,19 @@
     }
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "3.9.1",
+    "@coinbase/wallet-sdk": "4.0.0",
     "@metamask/sdk": "0.20.3",
     "@safe-global/safe-apps-provider": "0.18.1",
     "@safe-global/safe-apps-sdk": "8.1.0",
     "@walletconnect/ethereum-provider": "2.13.0",
-    "@walletconnect/modal": "2.6.2"
+    "@walletconnect/modal": "2.6.2",
+    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
     "msw": "^2.2.14"
   },
-  "contributors": [
-    "awkweb.eth <t@wevm.dev>",
-    "jxom.eth <j@wevm.dev>"
-  ],
+  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
   "keywords": [
     "react",
