--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -116,3 +116,5 @@ jobs:
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
