--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "pnpm run clean && pnpm run build:esm+types",
     "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
-    "clean": "rm -rf dist tsconfig.tsbuildinfo config plugins",
+    "clean": "rm -rf .DS_Store dist tsconfig.tsbuildinfo config plugins",
     "dev": "bun src/cli.ts",
     "test:build": "publint --strict",
     "typecheck": "tsc --noEmit"
@@ -50,12 +50,8 @@
   },
   "typesVersions": {
     "*": {
-      "config": [
-        "./dist/types/exports/config.d.ts"
-      ],
-      "plugins": [
-        "./dist/types/exports/plugins.d.ts"
-      ]
+      "config": ["./dist/types/exports/config.d.ts"],
+      "plugins": ["./dist/types/exports/plugins.d.ts"]
     }
   },
   "peerDependencies": {
@@ -94,18 +90,7 @@
     "fixturez": "^1.1.0",
     "msw": "^2.2.14"
   },
-  "contributors": [
-    "awkweb.eth <t@wevm.dev>",
-    "jxom.eth <j@wevm.dev>"
-  ],
+  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
-  "keywords": [
-    "wagmi",
-    "eth",
-    "ethereum",
-    "dapps",
-    "wallet",
-    "web3",
-    "cli"
-  ]
+  "keywords": ["wagmi", "eth", "ethereum", "dapps", "wallet", "web3", "cli"]
 }
