docs: chains note

--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
       ]
     }
   },
+  "engines": {
+    "node": "22.x"
+  },
   "simple-git-hooks": {
     "pre-commit": "pnpm format && pnpm lint:fix"
   },
