chore: bump biome

--- a/biome.json
+++ b/biome.json
@@ -42,7 +42,7 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
-      "trailingComma": "all",
+      "trailingCommas": "all",
       "semicolons": "asNeeded"
     }
   },
