--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -14,7 +14,7 @@ jobs:
     secrets: inherit
 
   changesets:
-    name: Create pull request or publish
+    name: Publish
     needs: verify
     permissions:
       contents: write
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         uses: wevm/actions/.github/actions/pnpm@main
 
-      - name: Create version pull request or publish to npm
+      - name: PR or publish
         uses: changesets/action@v1
         with:
           title: 'chore: version packages'
@@ -45,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Publish Prerelease
+      - name: Publish prerelease
         if: steps.changesets.outputs.published != 'true'
         continue-on-error: true
         env:
