refactor(cli): js ecosystem cleanup

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -63,22 +63,23 @@
     }
   },
   "dependencies": {
-    "abitype": "^1.0.2",
+    "abitype": "^1.0.4",
     "bundle-require": "^4.0.2",
     "cac": "^6.7.14",
-    "change-case": "^4.1.2",
+    "change-case": "^5.4.4",
     "chokidar": "^3.5.3",
     "dedent": "^0.7.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "esbuild": "^0.19.0",
     "execa": "^8.0.1",
+    "fdir": "^6.1.1",
     "find-up": "^6.3.0",
     "fs-extra": "^11.2.0",
-    "globby": "^13.2.2",
     "ora": "^6.3.1",
     "pathe": "^1.1.2",
     "picocolors": "^1.0.0",
+    "picomatch": "^3.0.0",
     "prettier": "^3.0.3",
     "viem": "2.x",
     "zod": "^3.22.2"
